--- a/src/components/HighlightedTextField/HighlightedTextField.scss
+++ b/src/components/HighlightedTextField/HighlightedTextField.scss
@@ -12,6 +12,12 @@
     } 
 }
 
+.warning-message{
+    font-size: .8em;
+    color: rgb(223, 98, 98);
+}
+
+
 @keyframes text-cursor {
     0%{
         opacity: 0;
